buildscript {
    ext {
        springBootVersion = '3.4.3'
        lombokVersion = '1.18.26'
        junitBomVersion = '5.10.0'
        liquibaseVersion = '4.15.0'
        testContainersVersion = '1.20.4'
        testContainersPostgreVersion = '1.19.6'
        // plugins
        springDependenciesPluginVersion = '1.0.11.RELEASE'
        liquibasePluginVersion = '2.0.4'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath("io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE")
    }
}

plugins {
    id 'io.spring.dependency-management' version "${springDependenciesPluginVersion}" apply false
    id 'org.springframework.boot' version "${springBootVersion}" apply false
    id 'org.liquibase.gradle' version "${liquibasePluginVersion}" apply false
}

allprojects {
    group = 'yurykorzun.art'
    version = '0.0.1-SNAPSHOT'
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    sourceCompatibility = '17'
    targetCompatibility = '17'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
        }
    }

    dependencies {
        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        // tests
        testImplementation platform("org.junit:junit-bom:${junitBomVersion}")
        testImplementation "org.junit.jupiter:junit-jupiter"

        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        testImplementation "org.testcontainers:testcontainers:${testContainersVersion}"

        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    }

    tasks.matching { it.name in ['jar', 'bootJar'] }.configureEach {
        enabled = false
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }
}